# ai-study-companion

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  openapi.yaml  package-lock.json  package.json  start.sh  supervisord.conf
ai-study-companion/: index.html  package-lock.json  package.json
ai-study-companion/src/api/: api.ts
backend/: AGENTS.md  Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routes/: ai.py  auth.py  leaderboard.py  user.py
backend/app/schemas/: ai.py  leaderboard.py  user.py
backend/app/services/: ai_service.py  auth_service.py  leaderboard_service.py  user_service.py
backend/tests/: test_ai.py  test_auth.py  test_leaderboard.py  test_user.py
backend/tests_integration/: test_example.py
frontend/: package-lock.json
